Fix proxy URL to use actual deployed proxy address

--- a/neurogen-exam-system/admin.html
+++ b/neurogen-exam-system/admin.html
@@ -1003,7 +1003,7 @@
                     modelInput.value = 'glm-4';
                     break;
                 case 'proxy':
-                    urlInput.value = 'https://your-project.vercel.app/api/proxy';
+                    urlInput.value = 'https://neurogen-qwen.vercel.app/api/proxy';
                     modelInput.value = 'qwen-turbo';
                     break;
             }
