Update system branding: change to 穆桥销售测验系统, remove subtitle, fix score display format

--- a/neurogen-exam-system/admin.html
+++ b/neurogen-exam-system/admin.html
@@ -241,7 +241,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>🏥 医学考试系统 - 后台管理</h1>
+        <h1>💼 穆桥销售测验系统 - 后台管理</h1>
         <p>题库管理 | API配置 | 数据统计</p>
     </div>
 
