--- a/neurogen-exam-system/index.html
+++ b/neurogen-exam-system/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>医学考试系统</title>
+    <title>穆桥销售测验系统</title>
     <style>
         * {
             margin: 0;
@@ -105,8 +105,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <h1>🏥 医学考试系统</h1>
-            <p class="subtitle">智能化医学知识测评平台</p>
+            <h1>💼 穆桥销售测验系统</h1>
             
             <div class="features">
                 <h3>🌟 系统特色</h3>
