--- a/neurogen-exam-system/exam.html
+++ b/neurogen-exam-system/exam.html
@@ -472,8 +472,8 @@
         // 从GitHub加载在线题库
         async function loadQuestionBankFromGitHub() {
             try {
-                console.log('正在从GitHub加载最新题库...');
-                const response = await fetch('https://raw.githubusercontent.com/Eddie318/Neurogen_test_system/main/questionbank.json');
+                console.log('正在从CDN加载最新题库...');
+                const response = await fetch('https://cdn.jsdelivr.net/gh/Eddie318/Neurogen_test_system@main/questionbank.json');
                 
                 if (response.ok) {
                     const onlineQuestionBank = await response.json();
@@ -532,8 +532,8 @@
         // 从GitHub加载API配置
         async function loadApiConfigFromGitHub() {
             try {
-                console.log('正在从GitHub加载API配置...');
-                const response = await fetch('https://raw.githubusercontent.com/Eddie318/Neurogen_test_system/main/apiconfig.json');
+                console.log('正在从CDN加载API配置...');
+                const response = await fetch('https://cdn.jsdelivr.net/gh/Eddie318/Neurogen_test_system@main/apiconfig.json');
                 
                 if (response.ok) {
                     const onlineConfig = await response.json();
